add missing FEE_RECIPIENT renames.

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -94,7 +94,7 @@ services:
       - --http-allow-origin=*
       - --unencrypted-http-transport
       - --suggested-fee-recipient
-      - ${REWARDS_TO}
+      - ${FEE_RECIPIENT}
     depends_on:
       - consensus
   get-keyapi-token:
