--- a/teku-base.yml
+++ b/teku-base.yml
@@ -62,7 +62,7 @@ services:
       - --validator-api-cors-origins=*
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
-      - --validators-proposer-default-fee-recipient=${REWARDS_TO}
+      - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
   get-keyapi-token:
     restart: "no"
     image: alpine:latest
