--- a/geth.yml
+++ b/geth.yml
@@ -73,6 +73,7 @@ services:
       - --authrpc.vhosts=*
     command: ${GETH_CACHE}
   set-prune-marker:
+    profiles: ["tools"]
     image: alpine:latest
     user: "10001:10001"
     restart: "no"
@@ -80,9 +81,6 @@ services:
       - geth-eth1-data:/var/lib/goethereum
     entrypoint: ["/bin/sh","-c"]
     command: /bin/sh
-  eth:
-    depends_on:
-      - execution
 volumes:
   geth-eth1-data:
   jwtsecret:
