--- a/teku-base.yml
+++ b/teku-base.yml
@@ -69,6 +69,7 @@ services:
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
   get-keyapi-token:
+    profiles: ["tools"]
     restart: "no"
     image: alpine:latest
     user: "10002"
@@ -82,6 +83,7 @@ services:
         cat var/lib/teku/validator/key-manager/validator-api-bearer
         echo
   validator-import:
+    profiles: ["tools"]
     restart: "no"
     image: teku:merge
     user: root
@@ -93,6 +95,7 @@ services:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     entrypoint: validator-import.sh
   validator-exit:
+    profiles: ["tools"]
     restart: "no"
     image: teku:merge
     user: teku
@@ -105,6 +108,7 @@ services:
       - --beacon-node-api-endpoint=http://consensus:5052
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
   validator-list:
+    profiles: ["tools"]
     restart: "no"
     image: teku:merge
     user: teku
@@ -119,11 +123,6 @@ services:
           echo -n "0x"
           cat $${file} | jq -r .pubkey
         done
-  eth:
-    image: tianon/true
-    restart: "no"
-    depends_on:
-      - consensus
 volumes:
   teku-data:
   jwtsecret:
