Changes for mev-boost 0.5.00

--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -20,6 +20,7 @@ services:
       - /app/mev-boost
       - -addr
       - 0.0.0.0:18550
+      - -${NETWORK}
       - -relays
       - ${MEV_RELAYS}
     <<: *logging
