--- a/lodestar/Dockerfile.binary
+++ b/lodestar/Dockerfile.binary
@@ -41,5 +41,6 @@ RUN adduser \
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/lodestar/validators && chown -R ${USER}:${USER} /var/lib/lodestar/validators && chmod 700 /var/lib/lodestar/validators
 COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint-vc.sh /usr/local/bin/
 
 ENTRYPOINT ["node", "--max-old-space-size=6144", "/usr/app/node_modules/.bin/lodestar"]
