--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -24,6 +24,7 @@ RUN ln -s ../../packages/cli/lib/index.js node_modules/.bin/lodestar
 # Scripts
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint-vc.sh /usr/local/bin/
 
 ARG USER=lsconsensus
 ARG UID=10002
