Snap sync on Nethermind; Checkpoint sync on Besu

--- a/besu.yml
+++ b/besu.yml
@@ -78,7 +78,7 @@ services:
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
-      - --sync-mode=X_SNAP
+      - --sync-mode=X_CHECKPOINT
 volumes:
   besu-eth1-data:
   jwtsecret:
