--- a/nm.yml
+++ b/nm.yml
@@ -61,7 +61,7 @@ services:
       - ${EL_WS_PORT:-8546}
       - --JsonRpc.AdditionalRpcUrls=http://0.0.0.0:8551|http;wss|engine;eth;net;web3;subscribe
       - --JsonRpc.JwtSecretFile=/var/lib/nethermind/secrets/jwtsecret
-      - --Sync.FastSync
+      - --Sync.SnapSync
       - "true"
       - --Metrics.Enabled
       - "true"
