Change default Besu target

--- a/default.env
+++ b/default.env
@@ -138,7 +138,7 @@ LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
 BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-BESU_DOCKER_TAG=develop
+BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
