--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -1,15 +1,25 @@
 # Build Lighthouse in a stock Rust build container
-FROM rust:latest as builder
+#FROM rust:bullseye as builder
+# mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
+FROM ubuntu:jammy as builder
 
 ARG BUILD_TARGET
+ENV FEATURES malloc_utils/mallinfo2,modern,gnosis
 
-RUN apt-get update && apt-get install -y git gcc g++ make cmake libclang-dev clang pkg-config llvm-dev libssl-dev patch --no-install-recommends
+#RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev
+# Need a bit more in Ubuntu
+RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev build-essential git curl
+
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/sigp/lighthouse.git && cd lighthouse && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:lh-pr; git checkout lh-pr; else git checkout ${BUILD_TARGET}; fi && make"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim
+#FROM debian:bullseye-slim
+# mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
+FROM ubuntu:jammy
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
@@ -63,7 +73,8 @@ RUN adduser \
 RUN mkdir -p /var/lib/lighthouse/validators && chown ${USER}:${USER} /var/lib/lighthouse/validators && chmod 700 /var/lib/lighthouse/validators
 
 # Copy executable
-COPY --from=builder /usr/local/cargo/bin/lighthouse /usr/local/bin/
+#COPY --from=builder /usr/local/cargo/bin/lighthouse /usr/local/bin/
+COPY --from=builder /root/.cargo/bin/lighthouse /usr/local/bin/
 
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
