Improve LH malloc() mem allocation

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -24,6 +24,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - RAPID_SYNC_URL=${RAPID_SYNC_URL}
+      - MALLOC_ARENA_MAX=4
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
