Override TTD empty by default in default.env

--- a/default.env
+++ b/default.env
@@ -2,9 +2,9 @@
 COMPOSE_FILE=teku-base.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
-# Override TTD - may be required during testnet launch. This value is for Ropsten
+# Override TTD - may be required during testnet launch.
 # If left empty, the client's built-in TTD is used
-OVERRIDE_TTD=50000000000000000
+OVERRIDE_TTD=
 # Decide whether to connect the CL to Flashbots MEV boost. Set MEV_BOOST to "true" for MEV
 # boost, or any other value including empty for not using MEV boost.
 # If "true" it also requires :mev-boost.yml in COMPOSE_FILE
