Clarify format of rapid sync URL

--- a/default.env
+++ b/default.env
@@ -16,8 +16,8 @@ NETWORK=prater
 # Network to use for execution client. If using main net, set to mainnet.
 EL_NETWORK=goerli
 # CLrapid sync via initial state/checkpoint. Please create an Infura eth2/beacon project first, then replace the {projectid} and {secret} here
-# Alternatively, use an already synced CL that you trust
-#RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
+# Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
+#RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io
 RAPID_SYNC_URL=
 
 # Secure web proxy - advanced use, please see instructions
