Add MEV boost support for Prysm

--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -109,6 +109,7 @@ services:
       - consensus:5052
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+      - --enable-validator-registration
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
