--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -23,6 +23,7 @@ RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-pa
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint-vc.sh /usr/local/bin/
 
 USER ${USER}
 
