--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -48,6 +48,7 @@ COPY --from=builder /usr/src/teku/build/install/teku/. /opt/teku/
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint-vc.sh /usr/local/bin/
 
 USER ${USER}
 
