Lift Besu RPC connection limit

--- a/besu.yml
+++ b/besu.yml
@@ -46,6 +46,7 @@ services:
       - --rpc-http-port
       - ${EL_RPC_PORT:-8545}
       - --rpc-http-cors-origins=*
+      - --rpc-http-max-active-connections=65536
       - --rpc-ws-enabled
       - --rpc-ws-api
       - "WEB3,ETH,NET"
