More aggressive source build targets throughout

--- a/default.env
+++ b/default.env
@@ -139,22 +139,23 @@ LS_DOCKER_TAG=next
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
-BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+BESU_SRC_BUILD_TARGET=main
 BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
-ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+ERIGON_SRC_BUILD_TARGET=devel
 ERIGON_DOCKER_TAG=devel
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
-NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_SRC_BUILD_TARGET=master
 NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
-GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+GETH_SRC_BUILD_TARGET=master
 GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.binary
 
