Ability to import slashing protection DB

--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -85,6 +85,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - NETWORK=${NETWORK}
     entrypoint:
       - validator-import.sh
       - /usr/local/bin/nimbus_beacon_node
