--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -3,7 +3,7 @@ x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
@@ -66,7 +66,7 @@ services:
     <<: *logging
     entrypoint:
       - node
-      - --max-old-space-size=8192
+      - --max-old-space-size=6144
       - /usr/app/node_modules/.bin/lodestar
       - validator
       - --rootDir
@@ -89,12 +89,12 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - NETWORK=${NETWORK}
     entrypoint:
       - validator-import.sh
       - node
-      - --max-old-space-size=8192
+      - --max-old-space-size=6144
       - /usr/app/node_modules/.bin/lodestar
-      - account
       - validator
       - import
       - --rootDir
@@ -103,6 +103,8 @@ services:
       - /val_keys
       - --network
       - ${NETWORK}
+    depends_on:
+      - consensus
   validator-exit:
     restart: "no"
     image: lodestar:local
@@ -112,7 +114,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - node
-      - --max-old-space-size=8192
+      - --max-old-space-size=6144
       - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
@@ -134,7 +136,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - node
-      - --max-old-space-size=8192
+      - --max-old-space-size=6144
       - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
@@ -151,7 +153,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - node
-      - --max-old-space-size=8192
+      - --max-old-space-size=6144
       - /usr/app/node_modules/.bin/lodestar
       - account
       - validator
