--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -171,6 +171,7 @@ services:
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - WALLET_PASSWORD=${WALLET_PASSWORD:-}
+      - NETWORK=${NETWORK}
     entrypoint:
       - validator-import.sh
       - validator
