--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -110,7 +110,7 @@ services:
       - consensus:5052
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
-      - --enable-validator-registration
+      - --enable-builder
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
