Support latest Lodestar w/ mev-boost and keymanager

--- a/default.env
+++ b/default.env
@@ -99,10 +99,9 @@ EL_NODE=http://execution:8551
 # or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
 CL_NODE=http://consensus:5052
 
-# You can set specific version targets and choose
-# binary or compiled from source builds below,
-# via `Dockerfile.binary` or `Dockerfile.source`
-# These settings are only migrated when running `./ethd update --keep-targets`
+# You can set specific version targets and choose binary or compiled from source builds below,
+# via "Dockerfile.binary" or "Dockerfile.source"
+# These settings are only migrated when running "./ethd update --keep-targets"
 
 # SSV
 SSV_NODE_TAG=latest
@@ -112,11 +111,13 @@ MEV_DOCKER_TAG=latest
 MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET=unstable
 NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
+# SRC build target can be a tag or a branch
 TEKU_SRC_BUILD_TARGET=master
 TEKU_DOCKER_TAG=latest
 TEKU_DOCKERFILE=Dockerfile.binary
@@ -128,6 +129,7 @@ LH_DOCKER_TAG=latest-modern
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
+# SRC build target can be a tag or a branch
 PRYSM_SRC_BUILD_TARGET=develop
 PRYSM_DOCKER_TAG=latest
 PRYSM_DOCKERFILE=Dockerfile.binary
@@ -135,7 +137,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LS_SRC_BUILD_TARGET=unstable
-LS_DOCKER_TAG=next
+LS_DOCKER_TAG=latest
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
@@ -145,26 +147,31 @@ BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
+# SRC build target can be a tag or a branch
 ERIGON_SRC_BUILD_TARGET=devel
 ERIGON_DOCKER_TAG=devel
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
+# SRC build target can be a tag or a branch
 NM_SRC_BUILD_TARGET=master
 NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
+# SRC build target can be a tag or a branch
 GETH_SRC_BUILD_TARGET=master
 GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.binary
 
 #Akula
+# SRC build target can be a tag or a branch
 AKULA_SRC_BUILD_TARGET=master
 AKULA_DOCKER_TAG=
 AKULA_DOCKERFILE=Dockerfile.source
 
 # staking-deposit-cli
+# SRC build target can be a tag or a branch
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
