--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -19,7 +19,7 @@ RUN set -eux; \
         gosu nobody true
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-passwords && mkdir -p /var/lib/teku/secrets && chown -R teku:teku /var/lib/teku && chmod -R 700 /var/lib/teku && chmod 750 /var/lib/teku/secrets
+RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-passwords && mkdir -p /var/lib/teku/ee-secret && chown -R teku:teku /var/lib/teku && chmod -R 700 /var/lib/teku && chmod 750 /var/lib/teku/ee-secret
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
