--- a/erigon/Dockerfile.binary
+++ b/erigon/Dockerfile.binary
@@ -13,7 +13,7 @@ USER root
 
 RUN apk --no-cache add shadow bash su-exec && groupmod -g "${GID}" erigon && usermod -u "${UID}" -g "${GID}" erigon
 
-RUN mkdir -p /var/lib/erigon/secrets && chown -R erigon:erigon /var/lib/erigon && chmod -R 700 /var/lib/erigon && chmod 750 /var/lib/erigon/secrets
+RUN mkdir -p /var/lib/erigon/ee-secret && chown -R erigon:erigon /var/lib/erigon && chmod -R 700 /var/lib/erigon && chmod 750 /var/lib/erigon/ee-secret
 
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
