--- a/teku-base.yml
+++ b/teku-base.yml
@@ -22,7 +22,7 @@ services:
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
-      - jwtsecret:/var/lib/teku/secrets
+      - jwtsecret:/var/lib/teku/ee-secret
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
       - RAPID_SYNC_URL=${RAPID_SYNC_URL}
@@ -45,7 +45,7 @@ services:
       - --network=${NETWORK}
       - --ee-endpoint=${EL_NODE}
       - --ee-jwt-secret-file
-      - /var/lib/teku/secrets/jwtsecret
+      - /var/lib/teku/ee-secret/jwtsecret
       - --p2p-port=${CL_P2P_PORT:-9000}
       - --p2p-peer-upper-bound=${CL_MAX_PEER_COUNT:-100}
       - --p2p-peer-lower-bound=${CL_MIN_PEER_COUNT:-64}
