Bring cl only and vc only files back in

--- a/default.env
+++ b/default.env
@@ -33,7 +33,11 @@ GRAFANA_HOST=grafana
 PROM_HOST=prometheus
 PRYSM_HOST=prysm
 EL_HOST=el
+EL_LB=el-lb
 EL_WS_HOST=elws
+EL_WS_LB=elws-lb
+CL_HOST=cl
+CL_LB=cl-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
