--- a/default.env
+++ b/default.env
@@ -21,6 +21,9 @@ NETWORK=goerli
 # Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
 #RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io
 RAPID_SYNC_URL=
+# Doppelganger protection - set to "true" to enable. This will intentionally skip two epochs on client start, and attempt to
+# detect duplicates of the validator(s) already running. Note this is NOT foolproof, though it can be useful when moving a node
+DOPPELGANGER=false
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
