Lodestar to support spaces in Graffiti

--- a/default.env
+++ b/default.env
@@ -169,7 +169,7 @@ NM_DOCKERFILE=Dockerfile.binary
 # Go-Ethereum aka Geth
 # SRC build target can be a tag or a branch
 GETH_SRC_BUILD_TARGET=master
-GETH_DOCKER_TAG=latest
+GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 
 #Akula
