Besu develop tag for now

--- a/default.env
+++ b/default.env
@@ -151,7 +151,7 @@ LS_DOCKERFILE=Dockerfile.binary
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 BESU_SRC_BUILD_TARGET=main
-BESU_DOCKER_TAG=latest
+BESU_DOCKER_TAG=develop
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
