--- a/default.env
+++ b/default.env
@@ -20,6 +20,10 @@ EL_NETWORK=goerli
 #RAPID_SYNC_URL=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io
 RAPID_SYNC_URL=
 
+# This is for Fantom Opera, genesis file to use. See https://github.com/Fantom-foundation/lachesis_launch/blob/master/docs/genesis-files.md
+# for a current list. Empty by default, HAS to be set on a fresh install. Choose one that is compatible with snap sync and pruned.
+GENESIS_FILE=
+
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
