--- a/default.env
+++ b/default.env
@@ -122,7 +122,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET=unstable
 NIM_DOCKER_TAG=multiarch-latest
-NIM_DOCKERFILE=Dockerfile.source
+NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
 # SRC build target can be a tag or a branch
