Fix Erigon engine API

--- a/default.env
+++ b/default.env
@@ -157,7 +157,7 @@ BESU_DOCKERFILE=Dockerfile.binary
 # Erigon
 # SRC build target can be a tag or a branch
 ERIGON_SRC_BUILD_TARGET=devel
-ERIGON_DOCKER_TAG=devel
+ERIGON_DOCKER_TAG=alpha
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
