--- a/besu.yml
+++ b/besu.yml
@@ -66,7 +66,6 @@ services:
       - ${EL_MIN_PEER_COUNT:-5}
       - --host-allowlist=*
       - --engine-host-allowlist=*
-      - --engine-jwt-enabled=true
       - --engine-jwt-secret=/var/lib/besu/ee-secret/jwtsecret
       - --engine-rpc-port=8551
       - --logging
@@ -79,8 +78,8 @@ services:
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
-#      - --sync-mode=X_CHECKPOINT
-      - --sync-mode=X_SNAP
+      - --sync-mode=X_CHECKPOINT
+#      - --sync-mode=X_SNAP
 volumes:
   besu-eth1-data:
   jwtsecret:
