--- a/akula.yml
+++ b/akula.yml
@@ -36,6 +36,8 @@ services:
       - ${EL_P2P_PORT:-30303}
       - --rpc-listen-address
       - 0.0.0.0:${EL_RPC_PORT:-8545}
+      - --engine-listen-address
+      - 0.0.0.0:8851
       - --chain
       - ${EL_NETWORK:-mainnet}
       - --prune
