--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -81,8 +81,12 @@ services:
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - MEV_BOOST=${MEV_BOOST}
+      - DOPPELGANGER=${DOPPELGANGER}
     <<: *logging
     entrypoint:
+      - docker-entrypoint-vc.sh
       - validator
       - --datadir
       - /var/lib/prysm
@@ -110,7 +114,6 @@ services:
       - consensus:5052
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
-      - --enable-builder
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
