--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -73,6 +73,7 @@ RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700
 
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./create-wallet.sh /usr/local/bin/
+COPY ./docker-entrypoint-vc.sh /usr/local/bin/
 
 USER ${USER}
 
