Fix Teku mev-boost, more robust handling of jwtsecret permissions

--- a/default.env
+++ b/default.env
@@ -95,7 +95,7 @@ LOG_LEVEL=info
 
 # JWT secret for CL:EL connection. This is created automatically by default.
 # If specified manually here, this could be used to split CL and EL to different
-# machines
+# machines. Do not use unless you have a distributed setup like that.
 JWT_SECRET=
 # If you run a distributed setup, setting this to DISTRIBUTED=true
 # will stop the nag screens during ./ethd update
